--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@ h1{
     color: white;
 }
 
+#large{
+    color: white;
+    font: 100px Arial;
+}
+
 h2{
     color: white;
 }
@@ -299,43 +304,3 @@ body {
     font-weight: 500;
   }
 
-  img{
-    height: 100%;
-    width: 100%;
-    }
-    
-    .parentContainer {
-    position: relative;
-    text-align: center;
-    color: white;
-    }
-    
-    .bottom-left {
-    position: absolute;
-    bottom: 10px;
-    left: 15px;
-    }
-    
-    .top-left {
-    position: absolute;
-    top: 10px;
-    left: 15px;
-    }
-    
-    .top-right {
-    position: absolute;
-    top: 10px;
-    right: 15px;
-    }
-    
-    .bottom-right {
-    position: absolute;
-    bottom: 10px;
-    right: 15px;
-    }
-    
-    .centered {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    }
